Pollus.Emscripten/WGPU/WGPUBrowserNative.cs

    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderBundleEncoderSetLabel")]
    extern public static unsafe void RenderBundleEncoderSetLabel(RenderBundleEncoder* renderBundleEncoder, [MarshalAs(UnmanagedType.LPUTF8Str)] string label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderBundleEncoderSetPipeline")]
    extern public static unsafe void RenderBundleEncoderSetPipeline(RenderBundleEncoder* renderBundleEncoder, RenderPipeline* pipeline);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderBundleEncoderSetVertexBuffer")]
    extern public static unsafe void RenderBundleEncoderSetVertexBuffer(RenderBundleEncoder* renderBundleEncoder, uint slot, Buffer* buffer, ulong offset, ulong size);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderBundleEncoderReference")]
    extern public static unsafe void RenderBundleEncoderReference(RenderBundleEncoder* renderBundleEncoder);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderBundleEncoderRelease")]
    extern public static unsafe void RenderBundleEncoderRelease(RenderBundleEncoder* renderBundleEncoder);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPassEncoderBeginOcclusionQuery")]
    extern public static unsafe void RenderPassEncoderBeginOcclusionQuery(RenderPassEncoder* renderPassEncoder, uint queryIndex);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPassEncoderBeginPipelineStatisticsQuery")]
    extern public static unsafe void RenderPassEncoderBeginPipelineStatisticsQuery(RenderPassEncoder* renderPassEncoder, QuerySet* querySet, uint queryIndex);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPassEncoderDraw")]
    extern public static unsafe void RenderPassEncoderDraw(RenderPassEncoder* renderPassEncoder, uint vertexCount, uint instanceCount, uint firstVertex, uint firstInstance);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPassEncoderDrawIndexed")]
    extern public static unsafe void RenderPassEncoderDrawIndexed(RenderPassEncoder* renderPassEncoder, uint indexCount, uint instanceCount, uint firstIndex, int baseVertex, uint firstInstance);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPassEncoderDrawIndexedIndirect")]
    extern public static unsafe void RenderPassEncoderDrawIndexedIndirect(RenderPassEncoder* renderPassEncoder, Buffer* indirectBuffer, ulong indirectOffset);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPassEncoderDrawIndirect")]
    extern public static unsafe void RenderPassEncoderDrawIndirect(RenderPassEncoder* renderPassEncoder, Buffer* indirectBuffer, ulong indirectOffset);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPassEncoderEnd")]
    extern public static unsafe void RenderPassEncoderEnd(RenderPassEncoder* renderPassEncoder);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPassEncoderEndOcclusionQuery")]
    extern public static unsafe void RenderPassEncoderEndOcclusionQuery(RenderPassEncoder* renderPassEncoder);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPassEncoderEndPipelineStatisticsQuery")]
    extern public static unsafe void RenderPassEncoderEndPipelineStatisticsQuery(RenderPassEncoder* renderPassEncoder);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPassEncoderExecuteBundles")]
    extern public static unsafe void RenderPassEncoderExecuteBundles(RenderPassEncoder* renderPassEncoder, nuint bundleCount, RenderBundle** bundles);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPassEncoderExecuteBundles")]
    extern public static unsafe void RenderPassEncoderExecuteBundles(RenderPassEncoder* renderPassEncoder, nuint bundleCount, ref RenderBundle* bundles);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPassEncoderInsertDebugMarker")]
    extern public static unsafe void RenderPassEncoderInsertDebugMarker(RenderPassEncoder* renderPassEncoder, byte* markerLabel);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPassEncoderInsertDebugMarker")]
    extern public static unsafe void RenderPassEncoderInsertDebugMarker(RenderPassEncoder* renderPassEncoder, in byte markerLabel);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPassEncoderInsertDebugMarker")]
    extern public static unsafe void RenderPassEncoderInsertDebugMarker(RenderPassEncoder* renderPassEncoder, [MarshalAs(UnmanagedType.LPUTF8Str)] string markerLabel);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPassEncoderPopDebugGroup")]
    extern public static unsafe void RenderPassEncoderPopDebugGroup(RenderPassEncoder* renderPassEncoder);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPassEncoderPushDebugGroup")]
    extern public static unsafe void RenderPassEncoderPushDebugGroup(RenderPassEncoder* renderPassEncoder, byte* groupLabel);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPassEncoderPushDebugGroup")]
    extern public static unsafe void RenderPassEncoderPushDebugGroup(RenderPassEncoder* renderPassEncoder, in byte groupLabel);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPassEncoderPushDebugGroup")]
    extern public static unsafe void RenderPassEncoderPushDebugGroup(RenderPassEncoder* renderPassEncoder, [MarshalAs(UnmanagedType.LPUTF8Str)] string groupLabel);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPassEncoderSetBindGroup")]
    extern public static unsafe void RenderPassEncoderSetBindGroup(RenderPassEncoder* renderPassEncoder, uint groupIndex, BindGroup* group, nuint dynamicOffsetCount, uint* dynamicOffsets);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPassEncoderSetBindGroup")]
    extern public static unsafe void RenderPassEncoderSetBindGroup(RenderPassEncoder* renderPassEncoder, uint groupIndex, BindGroup* group, nuint dynamicOffsetCount, in uint dynamicOffsets);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPassEncoderSetBlendConstant")]
    extern public static unsafe void RenderPassEncoderSetBlendConstant(RenderPassEncoder* renderPassEncoder, Color* color);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPassEncoderSetBlendConstant")]
    extern public static unsafe void RenderPassEncoderSetBlendConstant(RenderPassEncoder* renderPassEncoder, in Color color);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPassEncoderSetIndexBuffer")]
    extern public static unsafe void RenderPassEncoderSetIndexBuffer(RenderPassEncoder* renderPassEncoder, Buffer* buffer, IndexFormat format, ulong offset, ulong size);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPassEncoderSetLabel")]
    extern public static unsafe void RenderPassEncoderSetLabel(RenderPassEncoder* renderPassEncoder, byte* label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPassEncoderSetLabel")]
    extern public static unsafe void RenderPassEncoderSetLabel(RenderPassEncoder* renderPassEncoder, in byte label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPassEncoderSetLabel")]
    extern public static unsafe void RenderPassEncoderSetLabel(RenderPassEncoder* renderPassEncoder, [MarshalAs(UnmanagedType.LPUTF8Str)] string label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPassEncoderSetPipeline")]
    extern public static unsafe void RenderPassEncoderSetPipeline(RenderPassEncoder* renderPassEncoder, RenderPipeline* pipeline);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPassEncoderSetScissorRect")]
    extern public static unsafe void RenderPassEncoderSetScissorRect(RenderPassEncoder* renderPassEncoder, uint x, uint y, uint width, uint height);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPassEncoderSetStencilReference")]
    extern public static unsafe void RenderPassEncoderSetStencilReference(RenderPassEncoder* renderPassEncoder, uint reference);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPassEncoderSetVertexBuffer")]
    extern public static unsafe void RenderPassEncoderSetVertexBuffer(RenderPassEncoder* renderPassEncoder, uint slot, Buffer* buffer, ulong offset, ulong size);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPassEncoderSetViewport")]
    extern public static unsafe void RenderPassEncoderSetViewport(RenderPassEncoder* renderPassEncoder, float x, float y, float width, float height, float minDepth, float maxDepth);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPassEncoderReference")]
    extern public static unsafe void RenderPassEncoderReference(RenderPassEncoder* renderPassEncoder);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPassEncoderRelease")]
    extern public static unsafe void RenderPassEncoderRelease(RenderPassEncoder* renderPassEncoder);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPipelineGetBindGroupLayout")]
    extern public static unsafe BindGroupLayout* RenderPipelineGetBindGroupLayout(RenderPipeline* renderPipeline, uint groupIndex);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPipelineSetLabel")]
    extern public static unsafe void RenderPipelineSetLabel(RenderPipeline* renderPipeline, byte* label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPipelineSetLabel")]
    extern public static unsafe void RenderPipelineSetLabel(RenderPipeline* renderPipeline, in byte label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPipelineSetLabel")]
    extern public static unsafe void RenderPipelineSetLabel(RenderPipeline* renderPipeline, [MarshalAs(UnmanagedType.LPUTF8Str)] string label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPipelineReference")]
    extern public static unsafe void RenderPipelineReference(RenderPipeline* renderPipeline);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuRenderPipelineRelease")]
    extern public static unsafe void RenderPipelineRelease(RenderPipeline* renderPipeline);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuSamplerSetLabel")]
    extern public static unsafe void SamplerSetLabel(Sampler* sampler, byte* label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuSamplerSetLabel")]
    extern public static unsafe void SamplerSetLabel(Sampler* sampler, in byte label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuSamplerSetLabel")]
    extern public static unsafe void SamplerSetLabel(Sampler* sampler, [MarshalAs(UnmanagedType.LPUTF8Str)] string label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuSamplerReference")]
    extern public static unsafe void SamplerReference(Sampler* sampler);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuSamplerRelease")]
    extern public static unsafe void SamplerRelease(Sampler* sampler);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuShaderModuleGetCompilationInfo")]
    extern public static unsafe void ShaderModuleGetCompilationInfo(ShaderModule* shaderModule, PfnCompilationInfoCallback callback, void* userdata);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuShaderModuleSetLabel")]
    extern public static unsafe void ShaderModuleSetLabel(ShaderModule* shaderModule, byte* label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuShaderModuleSetLabel")]
    extern public static unsafe void ShaderModuleSetLabel(ShaderModule* shaderModule, in byte label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuShaderModuleSetLabel")]
    extern public static unsafe void ShaderModuleSetLabel(ShaderModule* shaderModule, [MarshalAs(UnmanagedType.LPUTF8Str)] string label);
